@@ -75,6 +75,19 @@
 #
 ##########################################################################################################
 #
+# IPMI_Fan_Redundancy
+#
+# IPMI_Fan_Redundancy_Fully_Redundant                                                          Nominal
+# IPMI_Fan_Redundancy_Redundancy_Lost                                                          Critical
+# IPMI_Fan_Redundancy_Redundancy_Degraded                                                      Warning
+# IPMI_Fan_Redundancy_Non_Redundant_Sufficient_Resources_From_Redundant                        Critical
+# IPMI_Fan_Redundancy_Non_Redundant_Sufficient_Resources_From_Insufficient_Redundancy          Critical
+# IPMI_Fan_Redundancy_Non_Redundant_Insufficient_Resources                                     Critical
+# IPMI_Fan_Redundancy_Redundancy_Degraded_From_Fully_Redundant                                 Warning
+# IPMI_Fan_Redundancy_Redundancy_Degraded_From_Non_Redundant                                   Warning
+#
+##########################################################################################################
+#
 # IPMI_Power_Supply_Redundancy
 #
 # IPMI_Power_Supply_Redundancy_Fully_Redundant                                                 Nominal
