@@ -15,6 +15,8 @@
 
 	* ipmi-sensors/, ipmimonitoring/: Pass SDR lun as well as slave
 	address for ipmb bridging.
+
+	* ipmimonitoring/: Add fan redundancy interpretation.
 	
 2008-08-26 Albert Chu <chu11@llnl.gov>
 
